syntax="proto3";                //Proto协议
package pb;                     //当前包名
option go_package = "./;pb";

//ping心跳  1000->2000
message Ping{
	int64 sn =1;
}

//ping心跳  2000
message PingResp{
	int64 sn =1;
	string nowTime =2;
}

//用户登陆 100000->200000
message Login{	
	int64  userIdPlat =1;  
	string username =2;
	string password =3;
	string token =4; //token
    string plat =5;   //平台
	string param =6; //附加参数
	string referral =7; // 推荐码	
}

//登陆信息 200000
message LoginResp{
	int64  userIdPlat=1;     //userIdPlat 平台用户id 
	string username =2;  //用户名
	string nickname =3;  //昵称
	string realname =4;  //真名
	int32  sex =5;       //性别
	string image =6;	 //头像
	string beRealname =7; //实名认证
    string plat =8;	     // 平台pc/wx/andr/ios
    int32  online =9;	 // 1在线 0离线
	string webrtc =10;	 // webrtc推拉流 
	repeated gameServer gameServerList =11; // {[服务器ip，服务器名，角色玩家id，角色玩家名]} 
}

// 游戏服务器信息
message gameServer{
	int64 serverId=1;
	string serverIp=2;
	string serverName=3; 
	repeated roleInfo roleList=4;   // 用户角色列表
}
// 服务器角色信息
message roleInfo{
	int64 userId=1; // 角色用户id   
    string nickname=2; //昵称
    int32  level=3;    //等级
}


//进入场景/房间 100001->200001
message EnterRoom{
	int64 roomId=1;
	int64 userId=2;
}

// 房间信息 200001
message EnterRoomResp{
	int64 roomId=1;    //房间id
	int32 type=2;      //房间类型 1公开 2 私有
	string name =3;    //房间名称
	int32  maxUser=4;   //最多用户
	string password=5;   //房间密码
	string image=6;     //插图
	repeated UserInfo userList =7;  //房间用户
}


// 聊天消息 100002 ->200002
message ChatMsg{
	int64 userId=1;     //用户id(发送人)
	int64 objId=2;      //对象id（用户id/房间id）
	int32 chatType=3;   //1 世界 2 房间 3 一对一私聊
	int32 msgType=4;    //1 文字 2 图片 3 视频 4 文件 5 语音聊天 6视频聊天   
	string msg=5;       //聊天内容  
	string url=6;       //附件url
	int64 sendTime=7;   //发送时间戳秒
}

//聊天消息 200002
message ChatMsgResp{
	repeated ChatMsg MsgList =1;  // 消息列表
}


//创建场景/房间 100003->200003
message CreateRoom{
	string name=1; //名称
	int32 type=2;    //房间类型 1公开 2 私有
	int32 maxUser=3;   //最多用户
	string password=4;   //密码
}

//创建场景/房间 200003
message CreateRoomResp{
	int32 status=1;  //200 成功  400失败
	string msg=2; //消息
}
 
//获取场景/房间列表 100004->200004
message RoomList{
	int32 type=1;
}

//获取场景/房间 200004
message RoomListResp{
	repeated EnterRoomResp roomList =1;
}

//退出/踢出，场景/房间 100005->200005
message QuitRoom{
	int64 roomId=1;
	int64 userId=2;  
	int64 userIdOpt=3;  //操作人id
	string remark=4;    //原因
}

//退出房间 200005
message QuitRoomResp{
	int64 userId=1;     //退出用户
	string remark=2;    //原因
}


//加好友 100100 ->200100
message AddFriend{
	int64 userId=1;     //userid
	int32 type=2;      // 0陌生人 1好友 2 黑名单 3 临时会话
}
//加好友 200100
message AddFriendResp{
	int32 status=1;  //200 成功  400失败
	string msg=2; //消息
}

//我的好友列表 100101 ->200101
message MyFriend{
	int32 type=1;            // 0 全部 1好友 2 黑名单 3 临时会话
	string searchKey=2;     // 查询字
}

//好友列表resp 200101
message MyFriendResp{
	repeated UserInfo userList =1;  //用户list
}

//退出/掉线 100900
message Logout{
	int32 type=1;     //  1主动退出 2 掉线 3 其他登录占用
	int64 userId=2;     //userid
}
//退出/掉线resp 200900
message LogoutResp{
	int32 type=1;     //  1主动退出 2 掉线  3 其他登录占用
	int64 userId=2;     //userid
}

//玩家移动  100200 ->200200
message Move{
	int64 userId=1;     
	Site site =2;        //坐标
}

//同步位置 200200
message MoveResp{
	repeated UserSite siteList =1;
} 

//玩家攻击 100201 ->200201
message Attack{
	int64 userId=1;  //发起者    
	int64 objId=2;   // 对象  
	string param=3;  //攻击参数/道具
}

//攻击返回 200201
message AttackResp{
	int64 userId=1;  //发起者    
	int64 objId=2;   // 对象  
	int32 status =3 ; //成功失败
	int64 hurt =4 ;  //伤害 
	int64 exp =5 ;   //经验  
	int64 coin =6 ;  //铜币 
	string param=7;  //战斗过程参数 
	string warInfo=8;  // 回合制json数据 
} 

//用户信息  
message UserInfo{
	int64  userId=1;     //userId 
	string nickname =3;  //昵称	 
	int32  sex =5;       //性别
	string image =6;	 //头像
	string beRealname =7;	 //实名认证
    string plat =8;	     // 平台pc/wx/andr/ios
    int32  online =9;	 // 1在线 0离线  
	int64 roomId=10;     //场景id　
	Site position =11;   //坐标
}

//玩家坐标
message UserSite{
	int64 userId=1;     
	Site site =2;        //坐标
	string action =3;   //动作参数
}

//坐标位置
message Site{
	float X=1;
	float Y=2;
	float Z=3;
	float V=4;
}  